# PS2022SS

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .textlintrc  404.html  DEVELOPMENT.md  README.md  index.html  mkdocs.yml  package-lock.json  package.json  prh.yml  pyproject.toml  requirements.txt  sitemap.xml  start
.github/workflows/: deploy.yml  lint.yml
css/: mystyle.css
docs/: index.md
figs/: .gitignore  alphametics_AAA_ABB_CBAA.tex  alphametics_AB_BA_AAC.tex  alphametics_BBA_CBC_DDAB.tex  astroid.nb  bisect.pptx  koch.pptx  koch_geom.pptx  latex.mk  make-maze.py  maze-explorer.pptx  mc_pi.pptx  newton.pptx  rule250.pptx  sphere.pptx
notebooks/: 00_動作確認.ipynb  01_高機能な電卓.ipynb  02_条件分岐.ipynb  03_反復処理.ipynb  04_関数.ipynb  05_グラフの描画.ipynb  06_文字列処理.ipynb  07_乱数.ipynb  08_モンテカルロ法.ipynb  09_ランダムウォーク.ipynb  10_フラクタル.ipynb  11A_ライフゲーム.ipynb  11_セルオートマトン.ipynb  12_方程式の解.ipynb  13_運動のシミュレーション.ipynb
previews/: 00_動作確認.html  01_高機能な電卓.html  02_条件分岐.html  03_反復処理.html  04_関数.html  05_グラフの描画.html  06_文字列処理.html  07_乱数.html  08_モンテカルロ法.html  09_ランダムウォーク.html  10_フラクタル.html  11A_ライフゲーム.html  11_セルオートマトン.html  12_方程式の解.html  13_運動のシミュレーション.html
scripts/: convert.py  make-binderlinks.py  make-footnotes.py  make-imagelinks.py  viewer.py
